crates/rulesteward-fapolicyd/tests/snapshots/fapd-S02__multi-macro-some-after-rule.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=ok
diagnostics=1
[fapd-S02] sev=Style line=3 col=1 span=36..54 :: macro `%second` defined after the first rule (move to file top)
